@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Mon Jul 07 11:54:35 CEST 2014
+#Tue Jul 08 11:47:16 CEST 2014
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
